@@ -45,7 +45,7 @@ namespace MonoTests.System.CodeDom
 			Assert.AreEqual (string.Empty, cmie.Method.MethodName, "#2");
 			Assert.IsNull (cmie.Method.TargetObject, "#3");
 #if NET_2_0
-			Assert.AreEqual (0, cmie.Method.TypeArguments, "#4");
+			Assert.AreEqual (0, cmie.Method.TypeArguments.Count, "#4");
 #endif
 			Assert.IsNotNull (cmie.Parameters, "#5");
 			Assert.AreEqual (0, cmie.Parameters.Count, "#6");
@@ -60,7 +60,7 @@ namespace MonoTests.System.CodeDom
 			Assert.AreEqual (string.Empty, cmie.Method.MethodName, "#10");
 			Assert.IsNull (cmie.Method.TargetObject, "#11");
 #if NET_2_0
-			Assert.AreEqual (0, cmie.Method.TypeArguments, "#12");
+			Assert.AreEqual (0, cmie.Method.TypeArguments.Count, "#12");
 #endif
 		}
 
@@ -81,7 +81,7 @@ namespace MonoTests.System.CodeDom
 			Assert.AreEqual (string.Empty, cmie.Method.MethodName, "#4");
 			Assert.IsNull (cmie.Method.TargetObject, "#5");
 #if NET_2_0
-			Assert.AreEqual (0, cmie.Method.TypeArguments, "#6");
+			Assert.AreEqual (0, cmie.Method.TypeArguments.Count, "#6");
 #endif
 
 			CodeMethodReferenceExpression method2 = new CodeMethodReferenceExpression ();
@@ -100,7 +100,7 @@ namespace MonoTests.System.CodeDom
 			Assert.AreEqual (string.Empty, cmie.Method.MethodName, "#14");
 			Assert.IsNull (cmie.Method.TargetObject, "#15");
 #if NET_2_0
-			Assert.AreEqual (0, cmie.Method.TypeArguments, "#16");
+			Assert.AreEqual (0, cmie.Method.TypeArguments.Count, "#16");
 #endif
 
 			Assert.IsNotNull (cmie.Parameters, "#17");
